--- a/blackjack.css
+++ b/blackjack.css
@@ -1,23 +1,29 @@
-h1 {
-  color: orange;
-}
-
 body {
   text-align: center;
   background-color: green;
-  color: white;
+  margin-top: 50px;
+}
+
+p {
   font-weight: bold;
   font-size: 25px;
+  font-style: italic;
+  font-family: sans-serif;
 }
 
 button {
-  background-color: orange;
-  width: 170px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  margin-bottom: 7px;
+  width: 180px;
   color: green;
+  background-color: yellow;
+  border: none;
   font-weight: bold;
   font-size: 18px;
-  margin-top: 10px;
-  border: none;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 6px;
+}
+
+h1 {
+  color: yellow;
 }
